--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -12,7 +12,7 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - name: test
       run: |
-        nix run nixpkgs#cargo test
+        nix cargo test
     - name: install cachix
       run: |
         nix profile install nixpkgs#cachix
