--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ panic = "abort"
 strip = true
 
 [dependencies]
+argh = "0.1.13"
 dashmap = "6.1.0"
 fancy-regex = "0.14.0"
 tokio = { version = "1.44.1", features = ["full"] }
